# yt-dlp-ui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PROJECT_BRIEF.md  README.md  THREATS.md  USE_CASES.md  deny.toml  dist-workspace.toml
.claude/: allowed-commands.yaml
.github/: actionlint.yml  zizmor.yml
.github/workflows/: ci.yml  package-deb-rpm.yml  package-dmg.yml  package-nsis.yml  release.yml
ci/: dist-build-setup.yml
crates/ad-window/: Cargo.toml
crates/ad-window/src/: main.rs
crates/app/: Cargo.toml  build.rs
crates/app/assets/fonts/: LICENSE.OFL.txt
crates/app/assets/licenses/: deno.txt  lgpl-2.1.txt  polyform-noncommercial-1.0.0.txt
crates/app/src/: about.rs  about_test.rs  bot_check.rs  bot_check_test.rs  browsers.rs  browsers_test.rs  build_paths.rs  build_paths_test.rs  download_mgr.rs  download_mgr_test.rs  error.rs  formats.rs  lib.rs  logging.rs  logging_test.rs  main.rs  model.rs  model_test.rs  paths.rs  paths_test.rs  thumbnails.rs  ui_bridge.rs  url_open.rs
crates/app/src/db/: migrations.rs  migrations_test.rs  mod.rs  queue.rs  queue_test.rs  settings.rs  settings_test.rs
crates/app/src/db/migrations/: 0001_initial.sql  0002_uc08_thumbnails_and_bytes.sql  0003_uc02_partial_file_path.sql  0004_uc27_placeholder_rows.sql
crates/app/tests/: about_modal_smoke.rs  add_bar_audio_only_reset.rs  add_bar_url_input_rendering.rs  bot_check_modal_smoke.rs  footer_counts.rs  formats_unit.rs  icon_snapshot_test.rs  main_window_overlays.rs  persistence.rs  queue_scroll.rs  remove_all_copy.rs  remove_all_footer_predicate.rs  remove_all_modal_smoke.rs  row_action_buttons.rs  row_visual_smoke.rs  settings_panel_model.rs  settings_panel_smoke.rs  smoke.rs  theme_persistence.rs  thumbnail_pipeline.rs  thumbnails_unit.rs  toast_smoke.rs
crates/app/ui/: about_modal.slint  add_bar.slint  bot_check_modal.slint  empty_state.slint  footer.slint  icons.slint  main_window.slint  queue_row.slint  remove_all_confirm_modal.slint  settings_panel.slint  source_icon.slint  thumbnail.slint
crates/app/ui/design/: _component_smoke.slint  components.slint  tokens.slint
crates/yt-dlp-bridge/: Cargo.toml
crates/yt-dlp-bridge/src/: auth.rs  auth_test.rs  cancel.rs  download.rs  error.rs  format.rs  format_test.rs  lib.rs  metadata.rs  metadata_test.rs  parser.rs  parser_test.rs
crates/yt-dlp-bridge/src/snapshots/: yt_dlp_bridge__format__format_tests__snapshot_best_audio_m4a.snap  yt_dlp_bridge__format__format_tests__snapshot_best_audio_mp3.snap  yt_dlp_bridge__format__format_tests__snapshot_best_audio_opus.snap  yt_dlp_bridge__format__format_tests__snapshot_best_heuristic.snap
crates/yt-dlp-bridge/tests/: download_fake_binary.rs  metadata_fake_binary.rs
design/: README.md
design/chats/: chat1.md
design/project/: app.jsx  bot-check-modal.jsx  icons.jsx  os-frame.jsx  queue-row.jsx  settings-panel.jsx  thumbnail.jsx  tokens.css  yt-dlp-ui Design.html
docs/adr/: 0001-language-and-ui-framework.md  0002-license.md  0003-monetization-model.md  0004-ad-window-process-isolation.md  0005-yt-dlp-bundling.md  0006-storage.md  0007-design-system.md  0008-reskin-and-thumbnails.md  0009-icon-fidelity-and-snapshot-tests.md  0010-ffmpeg-bundling.md  0011-macos-signing-and-notarization.md  README.md
examples/: fake-ad-server.rs  sample-urls.txt
installer/: Info.plist  build-macos-dmg.sh  launcher.sh  macos-signing.sh  nfpm.yaml  yt-dlp-ui.nsi
installer/entitlements/: ad-window.entitlements  deno.entitlements  ffmpeg.entitlements  yt-dlp-ui.entitlements  yt-dlp.entitlements
installer/tests/: test-deb-layout.sh  test-dmg-mount.sh  test-nsis-extract.ps1  test-rpm-layout.sh
scripts/: README.md  build-ffmpeg-macos.sh  fetch-deno.ps1  fetch-deno.sh  fetch-ffmpeg.ps1  fetch-ffmpeg.sh  fetch-yt-dlp.ps1  fetch-yt-dlp.sh  lib-deno-sha.ps1  lib-deno-sha.sh  lib-net-retry.ps1  lib-net-retry.sh  macos-signing-local.sh  runtime-deps-pins.env  test-fetch-deno.bats  test-fetch-ffmpeg.bats  test-fetch-ffmpeg.ps1  test-fetch-ps1.ps1  test-fetch-yt-dlp.bats
scripts/tests/fixtures/: README.md  deno-v2.7.14-unix.sha256sum  deno-v2.7.14-windows.sha256sum  generate-fixtures.sh  malformed.sha256sum  test-signer.asc  valid-sha256sums  valid-sig  wrong-key.asc
tools/: oklch-to-srgb.js
use-cases/: 01-queue-and-download-videos.md  02-cancel-remove-and-restart.md  03-bundle-yt-dlp-for-dev.md  04-fix-single-video-add.md  05-youtube-bot-check-recovery.md  06-bundle-binaries-in-installers.md  06-bundle-binaries-in-installers.proposal.md  07-design-system-foundation.md  08-reskin-main-shell-and-rows.md  09-settings-slide-in-panel.md  10-bot-check-modal-ui.md  11-ad-slot-deno-banner-toast.md  12-remove-all-queue-items.md  13-icon-fidelity-fix.md  14-start-all-resume-and-retry.md  15-fix-video-list-scrolling.md  16-fix-download-destination.md  17-merge-audio-and-video-with-ffmpeg.md  18-about-dialog-version-and-licenses.md  19-audio-only-vs-audio-video-toggle.md  20-extract-to-standalone-repo.md  21-fix-fetch-deno-v2-sha256sum-parser.md  22-fix-linux-release-build.md  23-fix-macos-x86_64-release-build.md  24-fix-windows-release-build.md  25-trim-release-assets-to-installers.md  26-fix-macos-arm64-launch-failure.md  27-instant-skeleton-rows-on-add.md  28-bundle-ffprobe-and-verify-ffmpeg.md  29-fix-addbar-url-input-clipping.md  30-clean-up-uc27-ci-failures.md
