[package]
name = "ad-window"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "yt-dlp-ui ad-rendering helper — separate process running a wry/tao WebView. Spawned and killed by the main app to keep idle RAM low."

[lints]
workspace = true

[[bin]]
name = "ad-window"
path = "src/main.rs"

[dependencies]
wry.workspace = true
tao.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
