[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "yt-dlp-ui main UI process — Slint frontend, tokio runtime, SQLite queue, ad-window orchestration."

# Workspace lints (clippy pedantic) plus a per-crate `unsafe_code` override.
#
# `unsafe_code` is downgraded from `forbid` to `deny` *only for this crate*
# because `slint::include_modules!()` injects code carrying
# `#[allow(unsafe_code)]` annotations, and `forbid` cannot be overridden by an
# inner `allow`. Production app/UI code in this crate still must not contain
# unsafe blocks; `deny` keeps that contract while letting the Slint codegen
# compile. Surfaced here per `PROJECT_BRIEF.md` § Quality & Standards.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[[example]]
name = "fake-ad-server"
path = "../../examples/fake-ad-server.rs"

[dependencies]
yt-dlp-bridge = { path = "../yt-dlp-bridge" }

slint.workspace = true
tokio = { workspace = true, features = ["full"] }
rusqlite.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rfd = "0.15"
reqwest = { workspace = true }

[dev-dependencies]
# `axum` is used only by the `fake-ad-server` example; never ships in release builds.
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
pretty_assertions = "1.4"
insta = "1.40"
tempfile = "3"
assert_cmd = "2"
# UC 08 row_visual_smoke — Slint's headless-test backend lets us instantiate
# MainWindow on a worker thread. Without this, the default winit-based
# backend panics on macOS ("EventLoop must be created on the main thread").
i-slint-backend-testing = "1.16.1"
mockito = "1.5"

# UC 13 icon snapshot test — exercises Slint's software renderer against
# `_ComponentSmoke` and pixel-diffs the result against a committed PNG
# baseline. macOS-only at MVP per the use case (font/AA differences make
# multi-OS pixel diffs unstable); see docs/adr/0009-icon-fidelity-and-snapshot-tests.md.
[target.'cfg(target_os = "macos")'.dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
slint = { version = "1.16.1", features = ["renderer-software"] }

[build-dependencies]
slint-build = "1.16.1"
